--- a/style.css
+++ b/style.css
@@ -89,10 +89,10 @@ body {
     text-transform: uppercase;
 }
 .contador{
-    font-size: 20px;
-    text-align: center;
+    display:flex;    
+    justify-content:center;
+    flex-wrap:wrap; 
 }
-
 @media screen and (min-width: 768px) {
     .botoes {
         display: flex;
